<resources
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Neuron plus</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">登录</string>
    <string name="action_registe">注  册</string>
    <string name="action_agree">注册表示同意优诺</string>
    <string name="action_agreement">《用户协议》</string>
    <string name="action_plase_input_account">请输入帐号</string>
    <string name="action_plase_input_password">请输入密码</string>
    <string name="action_register_tishi">该手机号已被注册！</string>
    <string name="action_register_input_phoneaccount">请输入手机账号</string>
    <string name="action_register_input_yanzhengma">请输入验证码</string>
    <string name="action_register_get_yanzhengma">获取验证码</string>
    <string name="action_forget_account">去注册？</string>
    <string name="action_forget_password">忘记密码</string>
    <string name="bottom_room">首页</string>
    <string name="bottom_scene">设置</string>
    <string name="bottom_me">我</string>
    <string name="input_old_password">请输入原密码</string>
    <string name="input_new_password">请输入新密码（至少6位）</string>
    <string name="input_new_password_again">请确认新密码</string>
    <!-- Gesture code starting手势密码所需 -->
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
    <string name="reset_gesture_code">重新设置手势密码</string>

    <!--萤石所需-->
    <string name="add_camera_success_tip">你可以在电脑上登录i.ys7.com，在“我的店铺”里开启Wi-Fi营销了</string>
    <string name="update_exit">退出</string>
    <string name="wait">等待</string>
    <string name="countdown">留言时长还剩%d秒</string>
    <string name="added_camera_success_txt">添加成功</string>
    <string name="retry">重试</string>
    <string name="ez_auto_wifi_line_connect">使用有线连接</string>
    <string name="goto_help_error_page">去帮助看看</string>
    <string name="wifi_connection_finish_need_refresh">设备状态更新稍有延迟，需要等待5~10s的时间，请在“我的”界面手动刷新</string>
    <string name="complete_txt">完成</string>
    <string name="cloud_free">开通免费云存储</string>
    <string name="more">了解更多</string>
    <string name="auto_wifi_line_msg">请将您的设备和路由器用网线连接好</string>
    <string name="auto_wifi_line_connected">我已连接好</string>
    <string name="auto_wifi_tip_connecting_wifi">连接Wi-Fi网络</string>
    <string name="auto_wifi_tip_connecting_server">注册萤石平台</string>
    <string name="auto_wifi_tip_binding_account">绑定到你的账号</string>
    <string name="auto_wifi_tip_connecting_wifi_ing">萤小石正在努力配置Wi-Fi网络</string>
    <string name="auto_wifi_tip_connecting_wifi_ok">已配置好Wi-Fi网络</string>
    <string name="auto_wifi_tip_connecting_server_ing">快了快了，正在注册到萤石平台</string>
    <string name="auto_wifi_tip_connecting_server_ok">已注册到萤石平台</string>
    <string name="auto_wifi_tip_binding_account_ing">绑到你的账号下就大功告成了哦</string>
    <string name="auto_wifi_title_add_device2">第三步，添加设备</string>
    <string name="auto_wifi_title_add_device">设备添加</string>
    <string name="save_encrypt_password_fail_network_exception">设置失败，请检查您的网络</string>
    <string name="start_cloud">正在开启云存储，请稍候…</string>
    <string name="auto_wifi_line_connect_title">有线连接</string>
    <string name="auto_wifi_network_add_device1">有线连接添加</string>
    <string name="auto_wifi_dialog_connecting_msg">添加过程稍稍有点漫长，耐心等一会儿哦~</string>
    <string name="auto_wifi_connecting_msg1">请将手机靠近设备，添加过程大约需要等待1分钟，请稍候…</string>
    <string name="auto_wifi_connecting_failed">Wi-Fi连接失败，请重试或返回检查Wi-Fi密码是否输入正确</string>
    <string name="ez_auto_wifi_connecting_failed">配置Wi-Fi失败，请重试或返回检查Wi-Fi密码是否正确</string>
    <string name="auto_wifi_register_failed">设备未连接到萤石云，请检查设备所在网络是否能正常上网后重试</string>
    <string name="auto_wifi_add_device_failed">添加失败，请重试</string>
    <string name="device_error">设备异常</string>
    <string name="auto_wifi_add_device_failed2">添加失败</string>
    <string name="auto_wifi_device_added_already">该设备已被添加</string>
    <string name="auto_wifi_device_you_added_already">设备已添加</string>
    <string name="network_exception">网络不给力</string>
    <string name="add_device_failed_not_online">Wi-Fi配置成功、绑定账号失败，请重试</string>
    <string name="verify_code_error">验证码错误，请核对</string>
    <string name="auto_wifi_device_not_exist">绑定账号失败，设备不存在</string>
    <string name="auto_wifi_device_added_by_others">设备已被其他人添加</string>
    <string name="ez_add_device_failed_not_online">设备不在线</string>
    <string name="add_camera_fail_network_exception">添加失败，请检查您的网络</string>
    <string name="enable_cloud_fause">云存储开通失败</string>
    <string name="enable_cloud_fause_retry">开通失败，请重试。你也可以随时在"设置"—"存储状态"中开通云存储</string>
    <string name="not_now">暂不开通</string>
    <string name="realplay_verifycode_error_message0">请输入设备验证码，验证码位于机身标签上，如果您的设备没有验证码，请输入默认值ABCDEF（验证码为大写）</string>
    <string name="camera_detail_verifycode_error_title">请输入设备验证码</string>
    <string name="realplay_password_error_message1">初始密码为12345，若密码已被修改，请输入修改后的密码</string>
    <string name="serial_add_password_error_title">请输入设备密码</string>
    <string name="secure_validate">硬件安全验证</string>
    <string name="submit_secure_validate">提交安全验证</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="get_sms_code_fail">获取短信验证码失败</string>
    <string name="secure_validatee_fail">安全验证失败</string>
    <string name="secure_validate_success">安全验证成功</string>
    <string name="loading_text_default">加载中，请稍候</string>
    <string name="realplay_fail_device_not_exist">设备不在线</string>
    <string name="quality_hd">高清</string>
    <string name="quality_balanced">均衡</string>
    <string name="quality_flunet">流畅</string>
    <string name="ptz">云台</string>
    <string name="talk">对讲</string>
    <string name="capture">截图</string>
    <string name="record">录像</string>
    <string name="source_detection_off">OFF</string>
    <string name="source_detection_on">ON</string>
    <string name="close_source_localization">听声辨位关闭</string>
    <string name="close_camera_lens">镜头遮蔽</string>
    <string name="camera_lens_closed">镜头遮蔽中</string>
    <string name="start_voice_talk">正在发起对讲</string>
    <string name="realplay_full_talk_start_tip">你可以开始说话了</string>
    <string name="press_to_talk_release_to_listen">按住说话\n松开收听</string>
    <string name="realplay_set_fail_network">设置失败，请检查您的网络</string>
    <string name="setting_video_level">正在设置画面质量…</string>
    <string name="talking">对讲中…</string>
    <string name="remoteplayback_SDCard_disable_use">存储卡不可用</string>
    <string name="remoteplayback_record_fail_for_memory">录像中断,存储空间已满</string>
    <string name="already_saved_to_volume">已保存至相册</string>
    <string name="remoteplayback_capture_fail_for_memory">抓图失败,存储空间已满</string>
    <string name="realplay_play_fail_becauseof_network">视频播放失败，请检查您的网络</string>
    <string name="realplay_password_error_title">请输入设备密码</string>
    <string name="realplay_password_error_message3">您的设备版本过低，需要输入设备密码，建议您升级设备</string>
    <string name="realplay_encrypt_password_error_title">请输入视频图片加密密码</string>
    <string name="realplay_encrypt_password_error_message">您的视频已加密，请输入密码进行查看，初始密码为机身标签上的验证码，如果没有验证码，请输入ABCDEF（密码区分大小写）</string>
    <string name="camera_lens_too_busy">镜头转动中，请稍候</string>
    <string name="ptz_is_preseting">镜头转动中，请稍候</string>
    <string name="ptz_control_timeout_cruise_track_failed">轨迹巡航中，请稍候</string>
    <string name="ptz_preset_invalid_position_failed">当前位置已被删除，请返回刷新</string>
    <string name="ptz_preset_current_position_failed">当前就在这个位置哦</string>
    <string name="ptz_preset_sound_localization_failed">听声辨位中，请稍候</string>
    <string name="ptz_operation_too_frequently">操作太频繁啦，先歇歇吧</string>
    <string name="ptz_preset_exceed_maxnum_failed">已经不能收藏更多了</string>
    <string name="ptz_privacying_failed">镜头已遮蔽，无法操作云台</string>
    <string name="ptz_mirroring_failed">语音对讲中，无法操作云台</string>
    <string name="ptz_operation_failed">操作失败</string>
    <string name="realplay_play_talkback_fail_ison">同一时间只能与一台设备进行对讲哦，请停止其他对讲后再尝试</string>
    <string name="realplay_play_talkback_fail_privacy">隐私保护模式下无法对讲</string>
    <string name="realplay_play_talkback_request_timeout">请求超时，对讲已关闭</string>
    <string name="realplay_play_talkback_fail">对讲开启失败</string>
    <string name="realplay_play_talkback_network_exception">网络异常，对讲已关闭</string>
    <string name="realplay_set_vediomode_fail">视频质量切换失败</string>
    <string name="remoteplayback_record_fail">录像失败</string>
    <string name="remoteplayback_over_link">设备连接数过大，停止其他连接后再试试吧</string>
    <string name="realplay_fail_connect_device">播放失败，连接设备异常</string>
    <string name="realplay_set_fail_status">视频播放失败，设备已开启隐私保护</string>
    <string name="realplay_share_time_over">分享已结束，下回再见~</string>
    <string name="realplay_share_no_permission">已经停止分享</string>
    <string name="realplay_no_permission">无预览权限</string>
    <string name="realplay_play_no_video_source">没有视频源</string>
    <string name="please_input_phone_txt">请输入手机号码开通萤石云服务：/n（若对流程不清楚，请阅读《私有云账户对接流程》）</string>
    <string name="open_ys_service">开通萤石云服务</string>
    <string name="open_ys_service_success">开通萤石云服务成功</string>
    <string name="open_ys_service_fail">开通萤石云服务失败</string>
    <string name="realplay_play_fail">视频播放失败</string>
    <string name="device_password_is_null">设备密码不能为空</string>
    <string name="realplay_password_error_message4">视频已加密，请联系分享者获取密码进行查看（密码区分大小写）</string>


    <string name="basic_action_1">删除</string>
    <string name="basic_action_2">Action_2</string>
    <!--zxing二维码所需-->
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <!--加载框自定义内容-->
    <string name="loadtext_login">登录...</string>
    <string name="loadtext_load">加载中...</string>
    <string name="turn_on">开</string>
    <string name="turn_off">关</string>
    <string name="pause">停</string>
    <string name="no_devices">没有找到您说的设备名称,请保证设备名称和语音结果完全一致</string>
    <string name="trigger">触发</string>
    <string name="deploy">布防</string>
    <string name="install">安防</string>
    <string name="mute">静音</string>
    <string name="voice">音</string>
    <string name="up">上</string>
    <string name="menu">菜单</string>
    <string name="down">下</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="back">返回</string>
    <string name="cold">制冷</string>
    <string name="hot">制热</string>
    <string name="windSpeed">风速</string>
    <string name="gao">高</string>
    <string name="zhong">中</string>
    <string name="di">低</string>
    <string name="temperature">温度</string>
    <string name="keyword_light">灯</string>
    <string name="chuanglian">窗帘</string>
    <string name="chazuo">插座</string>
    <string name="hongwai">红外</string>
    <string name="dianshi">电视</string>
    <string name="kongtiao">空调</string>
    <string name="no_operation">未发现相应的操作指令,如开/关</string>
    <array name="itemArray">
        <item>选择照片</item>
        <item>拍照</item>
    </array>

</resources>
