<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/register_include"
        layout="@layout/titlebar_1"></include>
    <RelativeLayout
        android:id="@+id/register_inputphone_rll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_size_51"
        android:layout_below="@+id/register_include">
        <EditText
            android:id="@+id/register_inputiphong_ed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_size_40"
            android:textSize="@dimen/text_size_16"
            android:layout_marginRight="@dimen/dp_size_40"
            android:layout_marginLeft="@dimen/dp_size_40"
            android:layout_centerVertical="true"
            android:hint="@string/action_register_input_phoneaccount"
            android:background="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_login_account_bottom"
            android:layout_marginLeft="@dimen/dp_size_30"
            android:layout_marginRight="@dimen/dp_size_30"></View>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/register_tishi_rll"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_size_40"
        android:layout_below="@+id/register_inputphone_rll"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_register_tishi"
            android:textColor="@color/textcolor_chengse_FF5123"
            android:textSize="@dimen/text_size_14"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_size_30"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/register_yanzhengma_rll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_size_51"
        android:layout_below="@+id/register_tishi_rll"
        >
        <EditText
            android:id="@+id/register_inputcode_ed"
            android:layout_width="180dp"
            android:layout_height="@dimen/dp_size_40"
            android:textSize="@dimen/text_size_16"
            android:layout_marginRight="@dimen/dp_size_40"
            android:layout_marginLeft="@dimen/dp_size_40"
            android:layout_centerVertical="true"
            android:hint="@string/action_register_input_yanzhengma"
            android:background="@null"/>
        <TextView
            android:id="@+id/register_get_yanzhengma_tv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_size_30"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_size_40"
            android:text="@string/action_register_get_yanzhengma"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_15"
            android:textColor="@color/textcolor_bulue_2c85ff"/>
        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/dp_size_30"
            android:layout_toLeftOf="@+id/register_get_yanzhengma_tv"
            android:layout_centerVertical="true"
            android:background="@color/color_login_account_bottom"
            android:layout_marginRight="@dimen/dp_size_15"></View>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_login_account_bottom"
            android:layout_marginLeft="@dimen/dp_size_30"
            android:layout_marginRight="@dimen/dp_size_30"></View>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/register_password_rll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_size_51"
        android:layout_below="@+id/register_yanzhengma_rll">
        <EditText
            android:id="@+id/register_inputpassword_ed"
            android:layout_width="220dp"
            android:layout_height="@dimen/dp_size_40"
            android:textSize="@dimen/text_size_16"
            android:layout_marginRight="@dimen/dp_size_40"
            android:layout_marginLeft="@dimen/dp_size_40"
            android:layout_centerVertical="true"
            android:hint="@string/action_plase_input_password"
            android:background="@null"/>
        <ImageView
            android:id="@+id/register_invisible_iv"
            android:layout_width="@dimen/dp_size_22"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_size_40"
            android:layout_centerVertical="true"
            android:src="@mipmap/login_password_invisible"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_login_account_bottom"
            android:layout_marginLeft="@dimen/dp_size_30"
            android:layout_marginRight="@dimen/dp_size_30"></View>
    </RelativeLayout>
    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_size_51"
        android:text="@string/action_registe"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/white"
        android:layout_below="@+id/register_password_rll"
        android:layout_marginTop="@dimen/dp_size_51"
        android:layout_marginRight="@dimen/dp_size_30"
        android:layout_marginLeft="@dimen/dp_size_30"
        android:background="@drawable/login_button"/>
    <RelativeLayout
        android:id="@+id/register_useragreement_rll"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_size_30"
        android:layout_below="@+id/register_btn"
        android:layout_marginTop="@dimen/dp_size_10"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/tongyi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_agree"
            android:textSize="@dimen/text_size_12"/>
        <TextView
            android:id="@+id/register_useragreement_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_agreement"
            android:layout_toRightOf="@+id/tongyi_tv"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/textcolor_bulue_2c85ff"/>
    </RelativeLayout>
</RelativeLayout>