<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:orientation="horizontal"
	android:background="#33FFFFFF">

    <!-- 房间 -->
    <RelativeLayout 
        android:layout_width="0dp"
    	android:layout_height="match_parent"
    	android:layout_gravity="center_horizontal"
    	android:layout_weight="1"
    	android:id="@+id/bottom_room_rlly"
		>
    	<LinearLayout
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerInParent="true"
    	    android:orientation="vertical">
    	    <ImageView 
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_gravity="center_horizontal"
    	    	android:background="@mipmap/button_home_unchecked"
    	    	android:id="@+id/bottom_room_iv"/>
    		<TextView 
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_gravity="center_horizontal"
				android:layout_marginTop="4dp"
    	    	android:text="@string/bottom_room"
    	    	android:textColor="@color/white"
    	    	android:textSize="@dimen/text_size_11"
    	    	android:id="@+id/bottom_room_tv"/>
    	</LinearLayout>
    </RelativeLayout>
    <!-- 场景 -->
    <RelativeLayout 
        android:layout_width="0dp"
    	android:layout_height="match_parent"
    	android:layout_gravity="center_horizontal"
    	android:layout_weight="1"
    	android:id="@+id/bottom_scene_rlly"
		>
    	<LinearLayout 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerInParent="true"
    	    android:orientation="vertical">
    	    <ImageView 
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_gravity="center_horizontal"
    	    	android:background="@mipmap/button_scene_unchecked"
    	    	android:id="@+id/bottom_scene_iv"/>
    		<TextView 
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_gravity="center_horizontal"
    	    	android:text="@string/bottom_scene"
    	    	android:textColor="@color/white"
    	    	android:textSize="@dimen/text_size_11"
				android:layout_marginTop="4dp"
    	    	android:id="@+id/bottom_scene_tv"/>
    	</LinearLayout>
    </RelativeLayout>
    <!-- 我 -->
    <RelativeLayout 
        android:layout_width="0dp"
    	android:layout_height="match_parent"
    	android:layout_gravity="center_horizontal"
    	android:layout_weight="1"
    	android:id="@+id/bottom_me_rlly"
		>
    	<LinearLayout 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerInParent="true"
    	    android:orientation="vertical">
    	    <ImageView 
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_gravity="center_horizontal"
    	    	android:background="@mipmap/button_my_unchecked"
    	    	android:id="@+id/bottom_me_iv"/>
    		<TextView 
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_gravity="center_horizontal"
    	    	android:text="@string/bottom_me"
    	    	android:textColor="@color/white"
    	    	android:textSize="@dimen/text_size_11"
				android:layout_marginTop="4dp"
    	    	android:id="@+id/bottom_me_tv"/>
    	</LinearLayout>
    </RelativeLayout>

</LinearLayout>
