<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/login_top_iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_heightPercent="45%"
        android:background="@mipmap/login_bg"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/text_white_FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_size_12"/>
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/login_account_rll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_size_44"
        android:layout_below="@+id/login_top_iv"
        app:layout_marginTopPercent="5%h"
        >
        <ImageView
            android:id="@+id/login_account_iv"
            android:layout_width="@dimen/dp_size_22"
            android:layout_height="@dimen/dp_size_22"
            android:layout_marginLeft="@dimen/dp_size_30"
            android:layout_centerVertical="true"
            android:background="@mipmap/login_account"/>
        <EditText
            android:id="@+id/login_name_ed"
            android:maxLines="1"
            android:inputType="text"
            android:layout_width="220dp"
            android:layout_height="@dimen/dp_size_44"
            android:layout_toRightOf="@+id/login_account_iv"
            android:layout_marginLeft="@dimen/dp_size_18"
            android:hint="@string/action_plase_input_account"
            android:background="@null"
            android:textSize="@dimen/text_size_16"
            />
        <RelativeLayout
            android:id="@+id/login_select_account_rll"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_size_44"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_size_39">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_account_more"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <View
            android:id="@+id/login_account_bottom_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dp_size_30"
            android:layout_marginRight="@dimen/dp_size_30"
            android:background="@color/color_login_account_bottom"></View>
    </com.zhy.android.percent.support.PercentRelativeLayout>
    <RelativeLayout
        android:id="@+id/login_password_rll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_size_44"
        android:layout_below="@+id/login_account_rll"
        >
        <ImageView
            android:id="@+id/login_password_iv"
            android:layout_width="@dimen/dp_size_22"
            android:layout_height="@dimen/dp_size_22"
            android:layout_marginLeft="@dimen/dp_size_30"
            android:layout_centerVertical="true"
            android:background="@mipmap/login_password"/>
        <EditText
            android:id="@+id/login_password_ed"
            android:layout_width="220dp"
            android:maxLines="1"
            android:inputType="text"
            android:layout_height="@dimen/dp_size_44"
            android:layout_toRightOf="@+id/login_password_iv"
            android:layout_marginLeft="@dimen/dp_size_18"
            android:hint="@string/action_plase_input_password"
            android:background="@null"
            android:password="true"
            android:textSize="@dimen/text_size_16"/>
        <RelativeLayout
            android:id="@+id/login_select_password_rll"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_size_44"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_size_39">
            <ImageView
                android:id="@+id/login_visiblepwd_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_password_invisible"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dp_size_30"
            android:layout_marginRight="@dimen/dp_size_30"
            android:background="@color/color_login_account_bottom"></View>
    </RelativeLayout>
    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="84%"
        app:layout_heightPercent="8%"
        app:layout_marginLeftPercent="8%w"
        android:layout_below="@+id/login_password_rll"
        app:layout_marginTopPercent="12%h"
        android:background="@drawable/login_button"
        android:text="@string/action_sign_in"
        android:textColor="@color/text_white_FFFFFF"
        android:textSize="21sp"/>
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="4%"
        app:layout_marginTopPercent="10%h"
        android:layout_below="@+id/login_login_btn">
        <TextView
            android:id="@+id/login_forgetpassword_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_forget_password"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/text_black_333333"
            android:layout_centerVertical="true"
            app:layout_marginLeftPercent="33%w"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/text_black_333333"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/login_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor_bulue_2c85ff"
            android:text="@string/action_forget_account"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:layout_marginRightPercent="33%w"/>

    </com.zhy.android.percent.support.PercentRelativeLayout>
</com.zhy.android.percent.support.PercentRelativeLayout>